--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -68,9 +68,8 @@
 					</table>
 				</section>
 				<aside>
-					<h3>Aclaración</h3>
 					<p>
-					Sábados,domingos y feriados el taller no está abierto al público.Estamos a disposicion de manera virtual,contactate con nosotros por Whatsapp,instagram, Facebook o envianos un mensaje al siguiente correo "martinalepiccini@gmail.com"
+					Sábados, domingos y feriados el taller no está abierto al público. Estamos a disposicion de manera virtual, contactate con nosotros por Whatsapp, instagram, Facebook o envianos un mensaje al siguiente correo "martinalepiccini@gmail.com".
 					</p>
 				</aside>
 			</div>
