--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -38,46 +38,76 @@
             <div class="gridHijos ">
                 <h2>sierras sinfin</h2>
                 <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
-                <p>datos de la imagen</p>
+                <p>MARCAS: Uddholm,mercosur,pretech.</p>
+                <a href="https://wa.me/5493424308844/">
+                    <img src="../icon/Whatsapp.png" />
+                </a>
             </div>
             <div class="gridHijos">
                 <h2>sierras circulares</h2>
                 <img class="imagenChica" src="../imagenes/circular.png">
-                <p>datos de la imagen</p>
+                <p>MARCAS: Uddholm,mercosur,pretech.</p>
+                <a href="https://wa.me/5493424308844/">
+                    <img src="../icon/Whatsapp.png" />
+                </a>
             </div>
             <div class="gridHijos">
                 <h2>sierras copa</h2>
                 <img class="imagenChica" src="../imagenes/copa.png">
-                <p>datos de la imagen</p>
+                <p>consultar por precios y medidas.</p>
+                <a href="https://wa.me/5493424308844/">
+                    <img src="../icon/Whatsapp.png" />
+                </a>
             </div>
             <div class="gridHijos">
                 <h2>serruchos</h2>
-                <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
-                <p>datos de la imagen</p>
+                <img class="imagenChica" src="../imagenes/serrucho.png">
+                <p>
+                    MARCAS: Uddholm,mercosur,pretech.
+                </p>
+                <a href="https://wa.me/5493424308844/">
+                    <img src="../icon/Whatsapp.png" />
+                </a>
             </div>
             <div class="gridHijos">
                 <h2>mechas</h2>
                 <img class="imagenChica" src="../imagenes/mechas.png">
-                <p>datos de la imagen</p></div>
+                <p>consultar por precios y medidas.</p>
+                <a href="https://wa.me/5493424308844/">
+                    <img src="../icon/Whatsapp.png" />
+                </a>
+            </div>
             <div class="gridHijos">
                 <h2>Disco de lija</h2>
-                <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
-                <p>datos de la imagen</p>
+                <img class="imagenChica" src="../imagenes/discodelija.png">
+                <p>consultar por precios y medidas.</p>
+                <a href="https://wa.me/5493424308844/">
+                    <img src="../icon/Whatsapp.png" />
+                </a>
             </div>
             <div class="gridHijos">
                 <h2>hojas de lija</h2>
                 <img class="imagenChica" src="../imagenes/lijas.png">
-                <p>datos de la imagen</p></div>
+                <p>consultar por precios y medidas.</p>
+                <a href="https://wa.me/5493424308844/">
+                    <img src="../icon/Whatsapp.png" />
+                </a>
             </div>
             <div class="gridHijos">
                 <h2>bandas para lijadora</h2>
                 <img class="imagenChica" src="../imagenes/banda.png">
-                <p>datos de la imagen</p>
+                <p>consultar por precios y medidas.</p>
+                <a href="https://wa.me/5493424308844/">
+                    <img src="../icon/Whatsapp.png" />
+                </a>
             </div>
             <div class="gridHijos">
                 <h2>cuchillas</h2>
-                <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
-                <p>datos de la imagen</p>
+                <img class="imagenChica" src="../imagenes/cuchillas.png">
+                <p>consultar por precios y medidas.</p>
+                <a href="https://wa.me/5493424308844/">
+                    <img src="../icon/Whatsapp.png" />
+                </a>
             </div>
         </section>
 		<footer>
