--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -102,7 +102,12 @@
 							<img src="../imagenes/logo-removebg-preview.png" class="logo" />
 						</a>
 					</div>
-					
+					<div>
+						<p>
+							© 2022 Afilados Postai. Funciona gracias a <a href="https://wa.me/5493424639604/">Cecilia Regis
+							</a>
+						</p>		
+					</div>
 					<div class="animate__animated animate__lightSpeedInRight">
 						<a href="https://www.facebook.com/martinalepiccini">
 							<img src="../icon/fb.png" />
