--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -119,8 +119,10 @@
 						</a>
 					</div>
 					<div>
-						<h3>Contacto</h3>
-						<p>Martin piccini cel:342- 8388723873 fijo: 342 4608997</p>
+						<p>
+							© 2022 Afilados Postai. Funciona gracias a <a href="https://wa.me/5493424639604/">Cecilia Regis
+							</a>
+						</p>		
 					</div>
 					<div class="animate__animated animate__lightSpeedInRight">
 						<a href="https://www.facebook.com/martinalepiccini">
