--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -56,8 +56,10 @@
 						</a>
 					</div>
 					<div>
-						<h2>Contacto</h2>
-						<p>Martin piccini cel:342- 8388723873 fijo: 342 4608997</p>
+						<p>
+							© 2022 Afilados Postai. Funciona gracias a <a href="https://wa.me/5493424639604/">Cecilia Regis
+							</a>
+						</p>		
 					</div>
 					<div class="animate__animated animate__lightSpeedInRight">
 						<a href="https://www.facebook.com/martinalepiccini">
