--- a/index.html
+++ b/index.html
@@ -27,19 +27,34 @@
 					<a href="index.html">
 						<img src="imagenes/logo-removebg-preview.png" class="logo" />
 					</a>
-					<nav>
-						<input type="checkbox" id="check">
-						<label for="check" class="checkbtn">
-							<a href="#">
-								<img src="icon/menu.png" alt="menu">
-						</label>
-						<ul>
-							<li><a href="index.html">INICIO</a></li>
-							<li><a href="pages/sobrenosotros.html">NOSOTROS</a></li>
-							<li><a href="pages/horarios.html">HORARIOS</a></li>
-							<li><a href="pages/insumos.html">INSUMOS</a></li>
-							<li><a href="pages/contacto.html">CONTACTO</a></li>
-						</ul>
+					<nav class="navbar navbar-expand-lg navbar-light bg-light h-100">
+						<div class="container-fluid prueba">
+							<div class="bg-green d-flex mb-1 mb-lg-0 col-2 justify-content-end">
+								<i class="mdi mdi-account-circle info pr-2 text-primary font-size-19"></i><a href="#" class="text-primary"><span class="pr-3 border-right border-primary font-size-14"></span></a><a href="/logout" class="pt-1"><i class="pl-3 pr-3 mdi mdi-power text-primary font-size-22"></i></a>
+							</div>
+							<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+							</button>
+							<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+							<ul class="navbar-nav">
+								<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
+								</li>
+								<li class="nav-item">
+								<a class="nav-link" href="pages/sobrenosotros.html">NOSOTROS</a>
+								</li>
+								<li class="nav-item">
+								<a class="nav-link" href="pages/horarios.html">HRARIOS</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="pages/insumos.html">INSUMOS</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="pages/contacto.html">CONTACTO</a>
+								</li>
+							</ul>
+							</div>
+						</div>
 					</nav>
 				</div>
 			</header>
@@ -77,7 +92,7 @@
 						</button>
 					</div>
 				</div>
-				<section>
+				<section class="row">
 					<h2>¿Cómo llegar?</h2>
 					<article class="col-lg-12 col-xl-12 col-sm-12">
 						<iframe
@@ -96,7 +111,7 @@
 					</ol>
 				</section>
 			</menu>
-			<footer class="row">
+			<footer>
 				<div class="contenedor-footer">
 					<div>
 						<a href="index.html">
