--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,38 +1,56 @@
 <!DOCTYPE html>
-<head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="conoce nuestro taller de afilaciones,proporcionamos un servicio de venta y afilado de herramientas de corte">
-	<meta name="keywords" content="afilados,afilaciones,taller de afilados">
-	<title>afiladospostai</title>
-	<link
-		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-		rel="stylesheet"
-		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-		crossorigin="anonymous"
-	/>
-	<link rel="shortcut icon" href="../imagenes/favicon.png" />
-	<link
-		rel="stylesheet"
-		href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-	/>
-	<link rel="stylesheet" href="../css/pruebacss.css" />
-</head>
+<html lang="es">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="conoce nuestro taller de afilaciones,proporcionamos un servicio de venta y afilado de herramientas de corte">
+		<meta name="keywords" content="afilados,afilaciones,taller de afilados">
+		<title>afiladospostai</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+		<link rel="shortcut icon" href="../imagenes/favicon.png" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
+		<link rel="stylesheet" href="../css/pruebacss.css" />
+	</head>
 	<body>
 		<header>
 			<div>
-				<a href="../index.html">
-					<img src="../imagenes/logo-removebg-preview.png" class="logo" />
-				</a>
-				<nav>
-					<ul>
-						<li><a href="../index.html">INICIO</a></li>
-						<li><a href="sobrenosotros.html">NOSOTROS</a></li>
-						<li><a href="horarios.html">HORARIOS</a></li>
-						<li><a href="insumos.html">INSUMOS</a></li>
-						<li><a href="contacto.html">CONTACTOS</a></li>
-					</ul>
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<div class="container-fluid">
+						<a href="../index.html" class="navbar-brand"> 
+							<img src="../imagenes/logo-removebg-preview.png" class="logo" />
+						</a>
+						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+								<li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/sobrenosotros.html">NOSOTROS</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/horarios.html">HORARIOS</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/insumos.html">INSUMOS</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</nav>
 			</div>
 		</header>
@@ -91,9 +109,6 @@
 				</div>
 			</form>
 		</div>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi odio cupiditate exercitationem laudantium ut, quod consectetur. Est, error vitae nostrum, unde in, laboriosam iusto vero ab magnam ex nemo dolorum.
-		</p>
 		<footer>
 			<footer class="row">
 				<div class="contenedor-footer">
