--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -16,51 +16,68 @@
 		<link rel="stylesheet" href="../css/pruebacss.css" />
 	</head>
     <body>
-        <header>
-                <div>
-                    <a href="../index.html">
-                        <img src="../imagenes/logo-removebg-preview.png" class="logo" />
-                    </a>
-                    <nav>
-                        <ul>
-                            <li><a href="../index.html">INICIO</a></li>
-                            <li><a href="sobrenosotros.html">NOSOTROS</a></li>
-                            <li><a href="horarios.html">HORARIOS</a></li>
-                            <li><a href="insumos.html">INSUMOS</a></li>
-                            <li><a href="contacto.html">CONTACTOS</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </header>
+		<header>
+			<div>
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<div class="container-fluid">
+						<a href="../index.html" class="navbar-brand"> 
+							<img src="../imagenes/logo-removebg-preview.png" class="logo" />
+						</a>
+						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+								<li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/sobrenosotros.html">NOSOTROS</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/horarios.html">HORARIOS</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/insumos.html">INSUMOS</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</header>
             <!-- Fin Header -->
         <h1>Insumos</h1>
         <section class="contenedor gridPadre" >
             <div class="gridHijos ">
-                <h2>sierras sinfin</h2>
-                <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
+                <h2>Sierras sinfin</h2>
+                <img class="imagenChica" src="../imagenes/sierrasinfin-min.jpg">
                 <p>MARCAS: Uddholm,mercosur,pretech.</p>
                 <a href="https://wa.me/5493424308844/">
                     <img src="../icon/Whatsapp.png" />
                 </a>
             </div>
             <div class="gridHijos">
-                <h2>sierras circulares</h2>
-                <img class="imagenChica" src="../imagenes/circular.png">
+                <h2>Sierras circulares</h2>
+                <img class="imagenChica" src="../imagenes/circular-min.png">
                 <p>MARCAS: Uddholm,mercosur,pretech.</p>
                 <a href="https://wa.me/5493424308844/">
                     <img src="../icon/Whatsapp.png" />
                 </a>
             </div>
             <div class="gridHijos">
-                <h2>sierras copa</h2>
-                <img class="imagenChica" src="../imagenes/copa.png">
+                <h2>Sierras copa</h2>
+                <img class="imagenChica" src="../imagenes/copa-min.png">
                 <p>consultar por precios y medidas.</p>
                 <a href="https://wa.me/5493424308844/">
                     <img src="../icon/Whatsapp.png" />
                 </a>
             </div>
             <div class="gridHijos">
-                <h2>serruchos</h2>
+                <h2>Serruchos</h2>
                 <img class="imagenChica" src="../imagenes/serrucho.png">
                 <p>
                     MARCAS: Uddholm,mercosur,pretech.
@@ -70,8 +87,8 @@
                 </a>
             </div>
             <div class="gridHijos">
-                <h2>mechas</h2>
-                <img class="imagenChica" src="../imagenes/mechas.png">
+                <h2>Mechas</h2>
+                <img class="imagenChica" src="../imagenes/mechas-min.png">
                 <p>consultar por precios y medidas.</p>
                 <a href="https://wa.me/5493424308844/">
                     <img src="../icon/Whatsapp.png" />
@@ -86,8 +103,8 @@
                 </a>
             </div>
             <div class="gridHijos">
-                <h2>hojas de lija</h2>
-                <img class="imagenChica" src="../imagenes/lijas.png">
+                <h2>Hojas de lija</h2>
+                <img class="imagenChica" src="../imagenes/lijas-min.png">
                 <p>consultar por precios y medidas.</p>
                 <a href="https://wa.me/5493424308844/">
                     <img src="../icon/Whatsapp.png" />
@@ -95,14 +112,14 @@
             </div>
             <div class="gridHijos">
                 <h2>bandas para lijadora</h2>
-                <img class="imagenChica" src="../imagenes/banda.png">
+                <img class="imagenChica" src="../imagenes/banda-min.png">
                 <p>consultar por precios y medidas.</p>
                 <a href="https://wa.me/5493424308844/">
                     <img src="../icon/Whatsapp.png" />
                 </a>
             </div>
             <div class="gridHijos">
-                <h2>cuchillas</h2>
+                <h2>Cuchillas</h2>
                 <img class="imagenChica" src="../imagenes/cuchillas.png">
                 <p>consultar por precios y medidas.</p>
                 <a href="https://wa.me/5493424308844/">
@@ -120,7 +137,7 @@
 					</div>
 					<div>
 						<p>
-							© 2022 Afilados Postai. Funciona gracias a <a href="https://wa.me/5493424639604/">Cecilia Regis
+							© 2022 Afilados Postai. Funciona gracias a <a href="https://wa.me/5493424458298/">Cecilia Regis
 							</a>
 						</p>		
 					</div>
