--- a/index.html
+++ b/index.html
@@ -20,23 +20,20 @@
 		/>
 		<link rel="stylesheet" href="css/pruebacss.css" />
 	</head>
-	<body class="container-fluid">
-		<div class="conteiner">
+	<body>
+		
 			<header>
 				<div>
-					<a href="index.html">
-						<img src="imagenes/logo-removebg-preview.png" class="logo" />
-					</a>
-					<nav class="navbar navbar-expand-lg navbar-light  h-100">
+					<nav class="navbar navbar-expand-lg navbar-light">
 						<div class="container-fluid">
-							<div class="bg-green d-flex mb-1 mb-lg-0 col-2 justify-content-end">
-								<i class="mdi mdi-account-circle info pr-2 text-primary font-size-19"></i><a href="#" class="text-primary"><span class="pr-3 border-right border-primary font-size-14"></span></a><a href="/logout" class="pt-1"><i class="pl-3 pr-3 mdi mdi-power text-primary font-size-22"></i></a>
-							</div>
-							<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+							<a href="index.html" class="navbar-brand"> 
+								<img src="imagenes/logo-removebg-preview.png" class="logo" />
+							</a>
+							<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
 							</button>
-							<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-								<ul class="navbar-nav">
+							<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+								<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 									<li class="nav-item">
 										<a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
 									</li>
@@ -44,7 +41,7 @@
 										<a class="nav-link" href="pages/sobrenosotros.html">NOSOTROS</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" href="pages/horarios.html">HoRARIOS</a>
+										<a class="nav-link" href="pages/horarios.html">HORARIOS</a>
 									</li>
 									<li class="nav-item">
 										<a class="nav-link" href="pages/insumos.html">INSUMOS</a>
@@ -92,8 +89,8 @@
 						</button>
 					</div>
 				</div>
-				<section class="row">
-					<h2>¿Cómo llegar?</h2>
+				<section>
+					<h2 class="fs-4">¿Cómo llegar?</h2>
 					<article class="col-lg-12 col-xl-12 col-sm-12">
 						<iframe
 							class="mapa"
@@ -142,7 +139,6 @@
 					</div>
 				</div>
 			</footer>
-		</div>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
