--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -17,18 +17,35 @@
 	</head>
 	<body>
 		<header>
-			<div class="contenedor-header">
-				<a href="../index.html">
-					<img src="../imagenes/logo-removebg-preview.png" class="logo" />
-				</a>
-				<nav>
-					<ul>
-						<li><a href="../index.html">INICIO</a></li>
-						<li><a href="sobrenosotros.html">NOSOTROS</a></li>
-						<li><a href="horarios.html">HORARIOS</a></li>
-						<li><a href="insumos.html">INSUMOS</a></li>
-						<li><a href="contacto.html">CONTACTOS</a></li>
-					</ul>
+			<div>
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<div class="container-fluid">
+						<a href="../index.html" class="navbar-brand"> 
+							<img src="../imagenes/logo-removebg-preview.png" class="logo" />
+						</a>
+						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+								<li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/sobrenosotros.html">NOSOTROS</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/horarios.html">HORARIOS</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/insumos.html">INSUMOS</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</nav>
 			</div>
 		</header>
