--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -91,35 +91,41 @@
 				</aside>
 			</div>
 			<footer>
-				<footer class="row">
+				<div class="contenedor-footer">
 					<div class="contenedor-footer">
-						<div>
-							<a href="../index.html">
-								<img src="../imagenes/logo-removebg-preview.png" class="logo" />
+						<a href="../index.html">
+							<img src="../imagenes/logo-removebg-preview.png" class="logo" />
+						</a>
+						<p>
+							© 2022 Afilados Postai. Funciona gracias a <a href="https://wa.me/5493424639604/">Cecilia Regis
 							</a>
-						</div>
+						</p>		
+					</div>
+					<div class="div">
 						<div>
-							<p>
-								© 2022 Afilados Postai. Funciona gracias a <a href="https://wa.me/5493424639604/">Cecilia Regis
-								</a>
-							</p>		
-						</div>
-						<div class="animate__animated animate__lightSpeedInRight">
 							<a href="https://www.facebook.com/martinalepiccini">
 								<img src="../icon/fb.png" />
 							</a>
+						</div>
+						<div>
 							<a href="https://z-p15.www.instagram.com/afiladospostai/">
 								<img src="../icon/instagram.png" />
 							</a>
+						</div>
+						<div>
 							<a href="https://wa.me/5493424308844/">
 								<img src="../icon/Whatsapp.png" />
 							</a>
+						</div>
+						<div>
 							<a
-								href="https://www.google.com/maps/place/Postai/@-31.6150809,-60.685407,17z/data=!3m1!4b1!4m5!3m4!1s0x95b5a9fb98e0a763:0x57981626e9b28819!8m2!3d-31.6150855!4d-60.6832183">
-							<img src="../icon/location.png" />
+								href="https://www.google.com/maps/place/Postai/@-31.6150809,-60.685407,17z/data=!3m1!4b1!4m5!3m4!1s0x95b5a9fb98e0a763:0x57981626e9b28819!8m2!3d-31.6150855!4d-60.6832183"
+							>
+								<img src="../icon/location.png" />
 							</a>
 						</div>
 					</div>
+				</div>
 			</footer>
 		</div>
 	</body>
