--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 			</header>
 			<!-- Fin Header -->
 			<menu>
-				<h1>Postai</h1>
-				<h2>
-					Venta y afilados de herramientas de corte/servicios industriales
+				<h1 class="fs-2">Postai</h1>
+				<h2 class="fs-2">
+					Venta y afilados de herramientas de corte,servicios industriales
 				</h2>
 				<div class="carrusel">
 					<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -90,7 +90,7 @@
 					</div>
 				</div>
 				<section>
-					<h2 class="fs-4">¿Cómo llegar?</h2>
+					<h2 class="fs-2">¿Cómo llegar?</h2>
 					<article class="col-lg-12 col-xl-12 col-sm-12">
 						<iframe
 							class="mapa"
@@ -99,43 +99,49 @@
 					</article>
 				</section>
 				<section>
-					<h2 class="fs-4">Servicios</h2>
+					<h2 class="fs-2">Servicios</h2>
 					<ol>
-						<li class="fs-5">Venta y afilado de herramientas de corte (aserraderos, carnicería, jardinería, entre otras).</a></li>
-						<li class="fs-5">Soldaduras de sierra, tornería y metalmecánica</a></li>
-						<li class="fs-5">Arreglo y mantenimiento de máquinas de carpintería.</a></li>
-						<li class="fs-5">Afilado de tijeras en general (de peluquería, jardinería, tapicería entre otras).</a></li>
+						<li class="fs-3">Venta y afilado de herramientas de corte (aserraderos, carnicería, jardinería, entre otras).</a></li>
+						<li class="fs-3">Soldaduras de sierra, tornería y metalmecánica</a></li>
+						<li class="fs-3">Arreglo y mantenimiento de máquinas de carpintería.</a></li>
+						<li class="fs-3">Afilado de tijeras en general (de peluquería, jardinería, tapicería entre otras).</a></li>
 					</ol>
 				</section>
 			</menu>
 			<footer>
 				<div class="contenedor-footer">
-					<div>
+					<div class="contenedor-footer">
 						<a href="index.html">
 							<img src="imagenes/logo-removebg-preview.png" class="logo" />
 						</a>
-					</div>
-					<div>
 						<p>
 							© 2022 Afilados Postai. Funciona gracias a <a href="https://wa.me/5493424639604/">Cecilia Regis
 							</a>
 						</p>		
 					</div>
-					<div class="animate__animated animate__lightSpeedInRight">
-						<a href="https://www.facebook.com/martinalepiccini">
-							<img src="icon/fb.png" />
-						</a>
-						<a href="https://z-p15.www.instagram.com/afiladospostai/">
-							<img src="icon/instagram.png" />
-						</a>
-						<a href="https://wa.me/5493424308844/">
-							<img src="icon/Whatsapp.png" />
-						</a>
-						<a
-							href="https://www.google.com/maps/place/Postai/@-31.6150809,-60.685407,17z/data=!3m1!4b1!4m5!3m4!1s0x95b5a9fb98e0a763:0x57981626e9b28819!8m2!3d-31.6150855!4d-60.6832183"
-						>
-							<img src="icon/location.png" />
-						</a>
+					<div class="div">
+						<div>
+							<a href="https://www.facebook.com/martinalepiccini">
+								<img src="icon/fb.png" />
+							</a>
+						</div>
+						<div>
+							<a href="https://z-p15.www.instagram.com/afiladospostai/">
+								<img src="icon/instagram.png" />
+							</a>
+						</div>
+						<div>
+							<a href="https://wa.me/5493424308844/">
+								<img src="icon/Whatsapp.png" />
+							</a>
+						</div>
+						<div>
+							<a
+								href="https://www.google.com/maps/place/Postai/@-31.6150809,-60.685407,17z/data=!3m1!4b1!4m5!3m4!1s0x95b5a9fb98e0a763:0x57981626e9b28819!8m2!3d-31.6150855!4d-60.6832183"
+							>
+								<img src="icon/location.png" />
+							</a>
+						</div>
 					</div>
 				</div>
 			</footer>
